src/syntax_analysis/statement/tests/snapshots/monkey_interpreter__syntax_analysis__statement__tests__test_syntax_analysis_for_let_statements_case1.snap
---
source: src/syntax_analysis/statement/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Statement {
            statement: Let {
                identifier: "x",
                expression: Integer {
                    integer_token: Integer {
                        literal: "5",
                    },
                },
            },
        },
    ],
    syntax_parsing_errors: [],
}
