src/syntax_analysis/statement/tests/snapshots/monkey_interpreter__syntax_analysis__statement__tests__test_syntax_analysis_for_let_statements_case2.snap
---
source: src/syntax_analysis/statement/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap())"

---
Ok(
    [
        Statement {
            statement: Let {
                identifier: "x",
                expression: Integer {
                    literal: 5,
                },
            },
        },
        Statement {
            statement: Let {
                identifier: "z",
                expression: Infix {
                    left_hand: Integer {
                        literal: 7,
                    },
                    operator: Plus,
                    right_hand: Integer {
                        literal: 10,
                    },
                },
            },
        },
    ],
)
